package com.groupjn.userservice.factory;

public enum UserType {
    ADMIN,
    CLIENT
}
