@startuml

title __FACTORY's Class Diagram__\n

  namespace com.groupjn.serviceservice {
    namespace factory {
      class AdminUser {
          + createUser()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      class ClientUser {
          + createUser()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      class CreateUserFactory {
          + CreateUserFactory()
          + createUser()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      interface ICreateUserFactory {
          {abstract} + createUser()
      }
    }
  }
  

  namespace com.groupjn.serviceservice {
    namespace factory {
      enum UserType {
        ADMIN
        CLIENT
      }
    }
  }
  

  AdminUser .up.|> ICreateUserFactory
  ClientUser .up.|> ICreateUserFactory
  ClientUser o-- RoleRepository : roleRepository
  ClientUser o-- UserRepository : userRepository
  CreateUserFactory o-- UserRepository : repository
  CreateUserFactory o-- RoleServiceImpl : roleService
  CreateUserFactory o-- User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
